Fixed overflow-x issues

--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
 }
 
 html {
-    overflow: scroll;
+    overflow-y: scroll;
     overflow-x: hidden;
 }
 
@@ -38,6 +38,8 @@ html, body {
     overflow-x: hidden !important;
     padding: 0;
     margin: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .reverseSkewBox {
